0.8.0 - 0.8.1
-------------
	* Return 'NilClass' instead of null for nul('nil') values
	* Fixed wrong position of additional options to Ruby interpreter

0.7.2 - 0.8.0
-------------

	* minor refactoring in RubyDebuggerProxy: s/sendStepOverEnd/sendStepOver
	* ability to customize interpreter to be used by the rdebug-ide executable
	* fixed NPE from RubyThread.canStep(Into|Over) methods. The methods also
	  throws RubyDebuggerException now
	* support for reading of global variables
	* use canonical files to prevent errors mainly on Windows with long paths
	* adjusted connection timeout message
	* append IO synchronizers also to the fast debugger
	* ability to adjust environment of debugged process
	* Rubyish renaming RubyVariable.isStatic() to isClass()
	* log and provide more info within the exception when debugger start fails
	* get rid of non-sense RubyVariableInfo.UNKNOWN_IN_CONTEXT. Log(severe)
	  processing exception instead. To be tuned.
	* send 'exit' command to classic debugger as well (supported since classic
	  debugger backend 0.9.5)
	* better utilization of 'exit' and session ending/finishing
	* RubyFrame and RubyFrameInfo override equal and hashcode
	* ability to customize ReadersSupport and connecting-to-server timeouts
	* fixing threading problems when collecting stderr and stdout after server
	  startup timeout (also see NetBeans issue 110961)
	* adding RubyDebugEvent.isStepping()
	* synchronization fixes
	* Fixed RubyThread.stepReturn()
	* Fixed IOE when process is terminated by client before connection is
	  established.
	* Ability to evaluate multiline expressions.

0.7.1 - 0.7.2
-------------

	* migrating to ruby-debug-ide
	* ability to pass base directory (needed e.g. for Rails debugging)
	* ability to disable/enable a breakpoint
	* addition of RubyThread.runTo(path, line) feature
	* cleaner process termination control
	* fast debugger also includes Descriptor.getAddtionalOptions()